details.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v1 
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject:  "true"
      labels:
        app: details 
        version: v1 
    spec:
      containers:
      - name: details
        image: 'docker.io/istio/examples-bookinfo-details-v1:1.15.0'
