productpage.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: \"true\"
      labels:
        app: productpage
        version: v1
    spec:
      containers:
      - name: productpage-v1
        image: 'docker.io/istio/examples-bookinfo-reviews-v2:1.15.0'
