review.yml
echo "apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v1 
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject:  \"true\"
      labels:
        app: reviews
        version: v1 
    spec:
      containers:
      - name: reviews
        image: \'docker.io/istio/examples-bookinfo-reviews-v1:1.15.0\' "  \
| oc apply -n bookinfo -f -
