reviews-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v2
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: \"true\"
      labels:
        app: reviews
        version: v2
    spec:
      containers:
      - name: reviews
        image: 'docker.io/istio/examples-bookinfo-reviews-v2:1.15.0'
