reviews-v3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v3
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: reviews
        version: v3
    spec:
      containers:
      - name: reviews
        image: 'docker.io/istio/examples-bookinfo-reviews-v3:1.15.0'
