destination-rules-ratings.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ratings-client-mtls
spec:
  host: ratings-bookinfo.apps.cluster-vegas-b82c.vegas-b82c.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
