details-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-virtualservice
spec:
  hosts:
  - details.bookinginfo.apps.cluster-vegas-b82c.vegas-b82c.example.opentlc.com
  gateways:
  - booking-wildcard-gateway.-bookretail-istio-system.apps.cluster-vegas-b82c.vegas-b82c.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /incidents
    route:
    - destination:
        port:
          number: 8080
        host: details-bookinfo.apps.cluster-vegas-b82c.vegas-b82c.svc.cluster.local
