productpage-destinationrule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage-client-mtls
spec:
  host: productpage-bookinfo.apps.cluster-vegas-b82c.vegas-b82c.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
