ratings-service-gateway.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: \"true\"
  labels:
    app: ratings
  name: ratings-service-gateway
spec:
  host: ratings.bookinginfo.apps.cluster-vegas-b82c.vegas-b82c.example.opentlc.com
  port:
    targetPort: https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
