reviews-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-virtualservice
spec:
  hosts:
  - reviews.bookinginfo.apps.cluster-vegas-b82c.vegas-b82c.example.opentlc.com
  gateways:
  - booking-wildcard-gateway.bookretail-istio-system.apps.cluster-vegas-b82c.vegas-b82c.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /reviews
    route:
    - destination:
        port:
          number: 9080
        host: reviews-bookinfo.cluster-vegas-b82c.vegas-b82c.svc.cluster.local
